Larvis/Hello_to_Mars/hello-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-mars-service
spec:
  selector:
    app: hello-mars
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
